# snowfall

./: .gitattributes  .gitignore  .lfsconfig  DESIGN.md  README.md  deno.json  justfile  setup.sh
source/cmd/autumn/: .gitignore  Cargo.toml  README.md  justfile
source/cmd/autumn/data/: actor_definitions.yaml  cvars.yaml  weapons.yaml
source/cmd/autumn/src/: main.rs
source/cmd/autumn/src/actor/: components.rs  definitions.rs  mod.rs  systems.rs
source/cmd/autumn/src/ai/: aggressive_behavior.rs  mod.rs  pathfinding.rs  pathfinding_test.rs  stand_behavior.rs  systems.rs  wander_behavior.rs
source/cmd/autumn/src/camera/: camera_plugin.rs  camera_shake.rs  player_light.rs  systems.rs
source/cmd/autumn/src/combat/: attack_state.rs  mod.rs  status_effects.rs  visual_feedback.rs  weapon.rs
source/cmd/autumn/src/console/: console_ui.rs  mod.rs
source/cmd/autumn/src/core/: mod.rs
source/cmd/autumn/src/game_state/: plugin.rs  states.rs
source/cmd/autumn/src/hud/: mod.rs
source/cmd/autumn/src/item/: components.rs  mod.rs  plugin.rs  systems.rs
source/cmd/autumn/src/menu/: plugin.rs  ui.rs
source/cmd/autumn/src/rendering/: mod.rs  texture_loader.rs
source/cmd/autumn/src/scripting/: cmd_add_gold.rs  cmd_add_stamina.rs  cmd_do_damage.rs  cmd_getvar.rs  cmd_listvars.rs  cmd_quit.rs  cmd_savecvars.rs  cmd_setvar.rs  cmd_setvar_test.rs  cvars.rs  cvars_test.rs  mod.rs  process_script.rs  scripting_plugin.rs
source/cmd/autumn/src/weapon/: components.rs  easing.rs  spawn.rs  systems.rs
source/cmd/autumn/src/world/: collision.rs  editor.rs  map.rs  map_test.rs  (+2 more)
(+277 files in other folders)
