[package]
name = "fallgray"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
fallgray_bevy_ui = { path = "../../crates/fallgray_bevy_ui" }
pathfinding = "4.0"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
